--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rplaceholdel="stylesheet">
     <link rel="stylesheet" href="font-awesome.min.css">
     <link rel="stylesheet" href="fontawesome5-overrides.min.css">
 
@@ -175,7 +175,7 @@
                         <div class="team-content">
                             <i></i>
                             <div class="user-image">
-                                <img src="http://placehold.it/60x60" alt="">
+                                <img src="img/187.jpeg" alt="" style="width: 70px;">
                             </div>
                             <div class="team-info">
                                 <h3 class="user-name">Kunal Pende</h3>
@@ -192,7 +192,7 @@
                         <div class="team-content">
                             <i></i>
                             <div class="user-image">
-                                <img src="http://placehold.it/60x60" alt="">
+                                <img src="img/188.jpeg" alt="" style="width: 70px;">
                             </div>
                             <div class="team-info">
                                 <h3 class="user-name">Debashish Datt</h3>
@@ -209,7 +209,7 @@
                         <div class="team-content">
                             <i></i>
                             <div class="user-image">
-                                <img src="http://placehold.it/60x60" alt="">
+                                <img src="img/015.jpeg" alt="" style="width: 70px;">
                             </div>
                             <div class="team-info">
                                 <h3 class="user-name">Ritu Murmu</h3>
