--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 
-    <link rel="stylesheet" href="css/templatemo-softy-pinko.css">
+    <link rel="stylesheet" href="css/home.css">
 
     </head>
     
